feat: detalles propiedades

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -110,6 +110,7 @@
     "title": "Real Estate Investment Formats",
     "subtitle": "Select from different types of off-plan units in Dubai according to profitability, term, and investment objective.",
     "whatsapp_button": "WhatsApp",
+    "details_button": "View Details",
     "whatsapp_message": "Hello, I am interested in receiving all the details about this property and similar opportunities currently available. Please include updated prices, payment plan, return expectations (ROI), availability, and options to schedule a visit.",
     "units": {
       "sobha_hartland_ii": {
