--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -110,6 +110,7 @@
     "title": "Formatos de inversión inmobiliaria",
     "subtitle": "Selecciona entre distintos tipos de unidades off-plan en Dubái según rentabilidad, plazo y objetivo de inversión.",
     "whatsapp_button": "WhatsApp",
+    "details_button": "Ver Detalles",
     "whatsapp_message": "Hola, estoy interesado en recibir todos los detalles sobre esta propiedad y oportunidades similares actualmente disponibles. Por favor, inclúyeme precios actualizados, plan de pago, expectativas de retorno (ROI), disponibilidad y opciones para agendar una visita.",
     "units": {
       "sobha_hartland_ii": {
