--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -12,7 +12,7 @@
     "title": "Invierte en bienes raíces en Dubái de forma segura, rentable y 100% guiada",
     "subtitle": "Descubre oportunidades exclusivas de inversión inmobiliaria en Dubái. Proyectos verificados, alta rentabilidad y asesoría personalizada.",
     "cta": "Explorar Propiedades",
-    "badge": "Hasta +8–12% anual en zonas prime",
+    "badge": "Hasta +8–30% anual en zonas prime",
     "cta_consultation": "Hablar con un asesor en español",
     "card_1_text": "Pago inicial. Plan de cuotas hasta 30 meses",
     "card_2_text": "Mensual. Pie inicial del 20%"
@@ -22,7 +22,7 @@
     "description": "El mercado inmobiliario de Dubái ofrece alta demanda de alquiler, fuerte apreciación de capital y condiciones fiscales altamente favorables, lo que permite a los inversores obtener rentabilidad en dólares sin impuestos sobre ingresos por alquiler ni plusvalía.",
     "benefits": {
       "tax_free": "0% impuestos sobre rentas y ganancias de capital",
-      "high_return": "Alta rentabilidad anual (7%–12% promedio)",
+      "high_return": "Alta rentabilidad anual (8%–30% promedio)",
       "freehold": "Propiedad Freehold para extranjeros",
       "stable_currency": "Moneda estable (AED vinculado al USD)",
       "high_demand": "Alta demanda internacional de alquiler",
@@ -201,5 +201,111 @@
       "submit": "Recibir presentación del proyecto"
     },
     "copyright": "Estetico Estate."
+  },
+  "bali": {
+    "hero": {
+      "title": "Invierte en Bali. El nuevo epicentro global del turismo, lujo y rentabilidad sostenible.",
+      "subtitle": "Propiedades estratégicas en la isla más demandada del Sudeste Asiático. Alta valorización, turismo internacional en crecimiento y rentabilidades atractivas en dólares.",
+      "badge": "Hasta +8-35% anual en zonas prime",
+      "cta": "Ver Proyectos",
+      "stats": [
+        { "value": "+5,2M", "text": "Turistas internacionales anuales (2024–2025 recuperación récord)" },
+        { "value": ">20%", "text": "Valorización promedio superior al 20% en los últimos años" },
+        { "value": "Hub", "text": "Hub global de nómadas digitales y startups" },
+        { "value": "8-14%", "text": "ROI estimado entre 8% y 14% bruto anual en zonas premium" }
+      ]
+    },
+    "about": {
+      "title": "¿Por qué Bali es el nuevo oro azul del turismo global?",
+      "description": "Bali no es solo una isla: es una marca internacional consolidada.\nReconocida como uno de los destinos más demandados del mundo, combina turismo de lujo, bienestar, naturaleza y cultura en un ecosistema económico altamente atractivo para inversores inmobiliarios.\nDesde la Cumbre del G20 en 2022 hasta su consolidación como hub de nómadas digitales, Bali se posiciona como termómetro económico del Sudeste Asiático.",
+      "benefits": {
+        "tourists": "+5 millones de turistas internacionales al año",
+        "appreciation": "Valorización superior al 20% en los últimos años",
+        "hub": "Hub global de nómadas digitales",
+        "demand": "Alta demanda de alquiler vacacional premium",
+        "recognition": "Reconocimiento internacional como destino top",
+        "roi": "ROI estimado entre 8% y 14% bruto anual",
+        "infrastructure": "Expansión de infraestructura y conectividad",
+        "emerging": "Mercado emergente con alto potencial de apreciación"
+      }
+    },
+    "why_choose": {
+      "title": "Por qué Bali es el nuevo epicentro de la inversión inmobiliaria en Asia",
+      "description": "Bali se ha consolidado como uno de los mercados emergentes más atractivos del Sudeste Asiático, combinando crecimiento turístico récord, demanda internacional sostenida y una nueva generación de inversores digitales que impulsan el mercado inmobiliario de la isla.\nLa isla no solo vende estilo de vida: vende rentabilidad respaldada por ocupación constante y valorización progresiva.",
+      "benefits": [
+        "✓ Bali: crecimiento turístico sostenido y expansión internacional.",
+        "✓ Mercado impulsado por nómadas digitales y turismo premium.",
+        "✓ Alta demanda de villas, residencias boutique y proyectos wellness.",
+        "✓ Rentabilidades competitivas frente a otros destinos globales."
+      ],
+      "quote": "“Invertir en Bali no es solo comprar propiedad, es entrar en el corazón del turismo global.”"
+    },
+    "location": {
+      "projects": {
+        "body_sense": {
+          "area": "ZONA PANDAWA",
+          "title": "BODY SENSE",
+          "description": "El proyecto está ubicado en la prestigiosa zona de acantilados de Pandawa — uno de los destinos de bienestar y estilo de vida de más rápido crecimiento en Bali, combinando vistas al océano, infraestructura de biohacking y fuerte demanda de alquiler.",
+          "features": [
+            "03 Minutos a Pandawa Beach",
+            "10 Minutos a Melasti Beach",
+            "20 Minutos a Nusa Dua"
+          ],
+          "market_insight": "Las propiedades enfocadas en el bienestar atraen a turistas de alto gasto, impulsando tarifas por noche premium y retornos anuales estables."
+        },
+        "rahya_villas": {
+          "area": "ZONA PANDAWA",
+          "title": "RAHYA VILLAS COMPLEX",
+          "description": "El proyecto está ubicado a solo 500 metros de Pandawa Beach — una zona costera premium en rápido desarrollo conocida por villas privadas, playas de arena blanca y alquileres vacacionales de alta ocupación.",
+          "features": [
+            "02 Minutos a Pandawa Beach",
+            "08 Minutos a Melasti Beach",
+            "15 Minutos a Nusa Dua"
+          ],
+          "market_insight": "El área de Bukit continúa experimentando una fuerte apreciación de capital debido a la oferta limitada de tierra y la creciente demanda turística."
+        },
+        "eighth_sense": {
+          "area": "ACANTILADO PANDAWA",
+          "title": "EIGHTH SENSE",
+          "description": "Situado en un acantilado panorámico con vistas al Océano Índico, Eighth Sense ofrece privacidad elevada, atardeceres en el océano y proximidad a las playas más icónicas de Bali.",
+          "features": [
+            "03 Minutos a Pandawa Beach",
+            "08 Minutos a Melasti Beach",
+            "20 Minutos al Aeropuerto Internacional Ngurah Rai"
+          ],
+          "market_insight": "Las propiedades con vista al océano en acantilados superan consistentemente a las unidades estándar en precios de alquiler y crecimiento de valor a largo plazo."
+        },
+        "iji_home": {
+          "area": "SUR DE BALI",
+          "title": "IJI HOME",
+          "description": "Operando en las áreas más demandadas del sur de Bali, incluyendo Pandawa, Bukit y Nusa Dua — ubicaciones con ocupación durante todo el año y fuerte flujo de turismo internacional.",
+          "features": [
+            "05 Minutos a Pandawa Beach (propiedades gestionadas)",
+            "10 Minutos a Melasti Beach",
+            "15 Minutos a Nusa Dua"
+          ],
+          "market_insight": "La gestión profesional de propiedades aumenta significativamente las tasas de ocupación y el rendimiento anual en comparación con las unidades autogestionadas."
+        }
+      }
+    },
+    "unit_types": {
+      "units": {
+        "body_sense": {
+          "title": "Body Sense",
+          "description": "Complejo wellness frente al océano en Pandawa Beach con suites y villas diseñadas para biohacking, spa y alta rentabilidad en Bali.",
+          "size": "Desde 32 m²"
+        },
+        "rahya_villas": {
+          "title": "Rahya Villas Complex",
+          "description": "Villas modernas con piscina privada a 500 m de Pandawa Beach, ideales para vivir o generar ingresos con alta ocupación turística.",
+          "size": "Desde 112 m²"
+        },
+        "eighth_sense": {
+          "title": "Eighth Sense",
+          "description": "Residencias y villas en acantilado con vistas panorámicas al océano, rooftop privado y rentabilidad estimada hasta 15% anual.",
+          "size": "Desde 35 m²"
+        }
+      }
+    }
   }
 }
